<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/middle_yellow"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/btpns"/>

        <TextView
            android:id="@+id/title"
            android:layout_below="@id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/regis_form"
            android:layout_marginTop="8dp"
            android:textSize="30dp"/>

        <RelativeLayout
            android:layout_below="@id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                app:cardCornerRadius="15dp"
                android:layout_marginBottom="50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:hint="@string/naleng">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/namaRegisET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:hint="@string/nik">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nikRegisET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="date"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:hint="@string/ttl">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/lahirRegisET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="date"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:hint="@string/telp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/telpRegisET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:hint="@string/alamat">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/alamatRegisET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:hint="@string/mail">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/mailRegisET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:hint="@string/uname">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/unameRegisET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:endIconMode="password_toggle"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:hint="@string/pass">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordRegisET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/regisBtn"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        app:backgroundTint="@color/med_aqua"
                        android:textColor="@color/black"
                        android:text="@string/regis"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textAllCaps="false"
                        android:layout_margin="20dp"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/setujuTV"
                        android:layout_below="@id/regisBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/setuju"
                        android:layout_marginTop="-18dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="20dp"
                        android:textSize="9sp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>