<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/middle_yellow"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_below="@id/title"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/btpns"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/welcome"
            android:textSize="25dp"
            android:textColor="@color/black"/>

        <com.google.android.material.button.MaterialButton
            android:layout_below="@id/logo"
            android:id="@+id/regisMainBtn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/cyclamen"
            android:textColor="@color/white"
            android:text="@string/regis"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textAllCaps="false"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_below="@id/regisMainBtn"
            android:id="@+id/loginMainBtn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/cyclamen"
            android:textColor="@color/white"
            android:text="@string/login"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textAllCaps="false"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="18sp"/>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>