<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/middle_yellow"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/login"
            android:textSize="30dp"
            android:textColor="@color/black"/>

        <RelativeLayout
            android:layout_below="@id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="60dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="50dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        app:startIconDrawable="@drawable/at"
                        android:hint="@string/mail">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/usernameLoginET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:startIconDrawable="@drawable/lock"
                        app:endIconMode="password_toggle"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:hint="@string/pass">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordLoginET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/forgot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:clickable="true"
                        android:text="@string/forgot" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/masukBtn"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        app:backgroundTint="@color/med_aqua"
                        android:textColor="@color/black"
                        android:text="@string/login"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textAllCaps="false"
                        android:layout_margin="20dp"
                        android:textSize="18sp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <ImageView
            android:id="@+id/imgIV"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_below="@id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:background="@drawable/bg_profile"
            android:src="@drawable/user"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>